# HappyLaba

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: tests.yml
bootstrap/: __init__.py  app_builder.py
core/: __init__.py
core/application/: __init__.py
core/application/sessions/: __init__.py  managed_sessions.py  session_context.py  session_manager.py  session_registry.py
core/application/sessions/factories/: session_factory.py
core/common/: __init__.py  awailable_port.py  generate_id.py
core/components/: framer.py
core/config/: __init__.py  config.py  tcp.py
core/domain/: devices_types.py
core/domain/schemas/: mllp_message.py
core/infrastructure/: __init__.py
core/infrastructure/network/: __init__.py
core/infrastructure/network/tcp/: __init__.py  exception.py  server.py  session.py
docs/v0.0.2/: tcp-server.md
docs/v0.0.3/: tcp-server.md
runtime/: happy_laba.py
tests/: __init__.py
tests/application/: conftest.py
tests/application/fake/: fake_tcp_session.py
tests/application/session_manager/: test_session_manager.py
tests/application/session_registry/: conftest.py  test_session_registry.py
tests/infrastructure/session/: conftest.py  test_tcp_session.py
