[project]
name = "HappyLaba"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "loguru>=0.7.3",
]

[tool.setuptools]
packages = ["core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[dependency-groups]
dev = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest_cov>7.0.0"
]
